Fix mobile overflow issue

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  height: webkit-fill-available;
+}
+
 .container {
   display: flex;
   height: 100vh;
